Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35511

DnD does not work if first column of QTreeWidget is hidden

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.13.2
    • 4.8.5, 5.1.0 , 5.12.5
    • Widgets: Itemviews
    • None
    • Mac cocoa (On All Cat)
    • 5aa13ea144cff4dbadf12c08b7aa49646347e186 (qt/qtbase/5.13)

      If First column of QTreeWidget is hidden and few items of the list selected and dragged, it has no effect, drag never starts, further list of treewidgetitem in mimeData(...)is always zero.

      Attached example reproduces this.

        1. dnd.cpp
          2 kB
          Qt Support
        2. qtbug35511.zip
          2 kB
          Andy Shaw
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            peppe Giuseppe D'Angelo
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes